--- a/faculty-home.html
+++ b/faculty-home.html
@@ -6,7 +6,7 @@
       <title>Linn-Benton Community College | Instructors and Advisors</title>
       <link rel="stylesheet" href="http://lbcc.oudemo.com/_resources/css/font-awesome.min.css"/>
       <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" type="text/css"/>
- <link rel="stylesheet" href="/css/faculty/style.css"/>
+ <link rel="stylesheet" href="/css/style.css"/>
 <script>document.cookie = "ou_personalization_class=default; max-age=60; path=/; domain=oudemo.com";</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
    <body>
