--- a/faculty-home.html
+++ b/faculty-home.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="http://lbcc.oudemo.com/_resources/css/font-awesome.min.css"/>
       <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" type="text/css"/>
  <link rel="stylesheet" href="https://www.linnbenton.edu/_resources/css/faculty/style.css"/> 
+<script src="https://www.linnbenton.edu/_resources/js/faculty/accordion.js"></script>
 <script>document.cookie = "ou_personalization_class=default; max-age=60; path=/; domain=oudemo.com";</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
    <body>
